src/test/ui/hkt/unsized_parameter.stderr
error[E0277]: the size for values of type `[u32]` cannot be known at compilation time
  --> $DIR/unsized_parameter.rs:4:24
   |
LL | fn test<I<%J>>(_input: I<[u32]>) { }
   |                        ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u32]`
note: required by a bound in `test::I`
  --> $DIR/unsized_parameter.rs:4:12
   |
LL | fn test<I<%J>>(_input: I<[u32]>) { }
   |            ^ required by this bound in `test::I`
help: consider relaxing the implicit `Sized` restriction
   |
LL | fn test<I<%J: ?Sized>>(_input: I<[u32]>) { }
   |             ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
